--- a/search.html
+++ b/search.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta
     name="description"      author="Pixar Clones"     
-    content="Find the info about anything in the universe, with Google.">
-  <meta property="og:url"                content="https://pixarclones.github.com/Search.html" />
+    content="Find the info about anything in the universe, with WeSearch (enhanced by Google).">
+  <meta property="og:url"                content="https://pixarclones.github.com/Search/search.html" />
   <meta property="og:type"               content="article" />
-  <meta property="og:title"              content="Google Search" />
-  <meta property="og:description"        content="Find the info about anything in the universe, with Google. This is a Google Search's clone, made using HTML, CSS, and Google's Custom Programmable Search Engine Services." />
-  <meta property="og:image"              content="https://pixarclones.github.io/GoogleRoundIcon.png" />
+  <meta property="og:title"              content="WeSearch" />
+  <meta property="og:description"        content="Find the info about anything in the universe, with WeSearch." />
+  <meta property="og:image"              content="https://pixarclones.github.io/Search/search-512.png" />
     <title>
 Search
 </title>
